<resources>
    <string name="app_name">POS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Admin">Admin</string>
    <string name="Cashier">Cashier</string>
    <string name="Receipt">Receipt</string>

    <string name="Grocery">Grocery</string>
    <string name="Automotive">Auto</string>
    <string name="General">General</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dzero">00</string>
    <string name="dec">.</string>

    <string name="gst">GST</string>
    <string name="pst">PST</string>

    <string name="Scan">Scan</string>

    <string name="total">Total</string>

    <string name="hint">Enter Item Price</string>
    <string name="Clear">Clear</string>
    
    // Admin text
    
    <string name="Refund">Refund</string>
    
    <string name="Cancel_Transaction">Cancel Sale</string>
    
    <string name="Change_Tax">Mod Tax</string>
    
    <string name="Print_receipts">Print Receipt</string>

    <string name="Print_Total_Sales">Total Sales</string>

    <string name="Login">Login</string>

    <string name="Discount">DST %</string>

    <string name="Add_Product">Add Product</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_receipt">receipt</string>
    <string name="title_activity_cashier_">Cashier_Activity</string>
    <string name="title_activity_receipt_">Receipt_Activity</string>


</resources>
