<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myriad.pos.Cashier_Activity"
    android:orientation="vertical"
    android:background="@color/bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/Admin"
                android:id="@+id/button"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/Cashier"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/Receipt"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="5"
            android:gravity="center_vertical|right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="25dp"
            android:hint="@string/hint"
            android:enabled="false"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/l1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/btn">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|top" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Grocery"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:text="@string/Automotive"
                    android:textSize="12sp"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/General"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:text="@string/Clear"
                    android:textSize="12sp"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_weight="1"
                android:layout_gravity="left|top" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nine"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_weight="1"
                android:layout_gravity="left|top" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/gst"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_weight="1"
                android:layout_gravity="left|top" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pst"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_weight="1"
                android:layout_gravity="left|top" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dec"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dzero"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/total"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#7d7123" />

    </LinearLayout>

</LinearLayout>
